# zerialize

./: .travis.yml  CMakeLists.txt  README.md
gtest/: gmock-gtest-all.cc
src/: CMakeLists.txt  Serialize.cpp  Serialize.h
tests/: AllTest.cpp  CMakeLists.txt  Serialize.cpp
